# cw_7

./: .env.dev  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
habits/: models.py  urls.py
habits/management/commands/: tg_bot.py
users/: models.py
