[tool.poetry]
name = "cw-7"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "cw_7"}]

[tool.poetry.dependencies]
python = "^3.11"
djangorestframework = "^3.14.0"
django = "^4.2.6"
psycopg2-binary = "^2.9.9"
pillow = "^10.1.0"
drf-yasg = "^1.21.7"
rest-framework-simplejwt = "^0.0.2"
django-celery-beat = "^2.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
